--- a/haskell.html
+++ b/haskell.html
@@ -83,7 +83,7 @@ ghci> pi * 5^2
 </code>
 善哉．<br />
 なお Haskell に変数はない，という言い方も多い（値を "束縛" することはあっても，それを変化させられないから）けど，<br /> 
-ここではとりあえず variable と呼んでおきます． 
+ここではとりあえず variable と呼んでおきます．なんかもう全部（数学で言う）関数みたいなもん，みたい．
 </p>
 <h3>Haskell source files</h3>
 <p>ではでは僕らも変数を定義してみよう．と，いうところで…
@@ -397,6 +397,7 @@ areaSquare s = areaRect s s
 </p>
 <h2> Local definitions </h2>
 <h3> <code>where</code> clauses </h3>
+<p>
 その関数の中でしか使わへんようなやつをいちいちきちんと定義するのもアレなので．<br />
 Heron の公式 ($ A = \sqrt{s (s-a) (s-b) (s-c)} $ where $ s = (a+b+c)/2 $) 
 <code Haskell>
@@ -404,3 +405,37 @@ heron a b c = sqrt ( s*(s-a)*(s-b)*(s-c) )
     where 
     s = (a+b+c) / 2
 </code>
+<code>where</code> と local definitions はスペース4つでインデントして区別されます．<br />
+このへん python みたいに whitespace sensitive なわけですねー．<br />
+そしてこれを，
+<code Haskell>
+heron a b c = sqrt ( s*(s-a)*(s-b)*(s-c) ) -- s はここでは定義されてない
+s = (a+b+c) / 2  -- ここでは a, b, c が定義されてない
+</code>
+と書くと，<code> s = (a+b+c)/2 </code> のところは <code> heron </code> の右辺の定義の一部としては解釈されないので，<br />
+所定の結果は得られません．
+</p>
+<p>他の例．
+<code Haskell>
+areaTriangleTrig a b c = c * height / 2 --三角関数で
+    where
+    cosa = (b^2 + c^2 - a^2) / (2*b*c) --余弦定理
+    sina = sqrt(1 - cosa^2)
+	height = b * sina
+areaTriangleHeron a b c = result --ヘロンの公式から
+    where
+    result = sqrt(s*(s-a)*(s-b)*(s-c))
+    s = (a+b+c) / 2
+</code>
+</p>
+<h3> Scope </h3>
+上の例で <code> a </code> とか <code> b </code> とか <code> c </code> とかたくさん出てきたけど，どうなってるんか．<br />
+これはありがたいことに思ったとおりに動く：(<code>let</code> のことは一旦おいといて．)
+<code Plain Text>
+Prelude> let r = 0
+Prelude> let area r = pi * r^2
+Prelude> area 5
+</code>
+最初に <code>r = 0</code> といってるから <code>area r = pi * r^2</code> で問答無用に 0や! とはなりません．<br />
+要するに 2つの<code> r </code> は別のものを指してるというわけ．<br />
+詳しくはここでは省くけど， scope っていう（他の言語にもあるよね）仕組みで上手くいくようになってる．
